# pip-packaging

./: README.md  copyright.txt  pyproject.toml
tests/: test.py
