[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package_rookie_007"
version = "0.0.3"
authors = [
  { name="Rushikesh Kundkar", email="r4002001005025k@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
  "cryptography",
  "click>=7, <9, != 8.0.0",
  "python-dateutil==2.8.*",
]

[project.urls]
"Homepage" = "https://gitlab.com/RRkundkar777/packaging_tutorial"
"Bug Tracker" = "https://gitlab.com/RRkundkar777/packaging_tutorial/-/issues"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
  "copyright.txt",
]

[tool.hatch.build.targets.wheel]
packages = ["src/example_package_rookie_007"]